--- a/src/liver_disease_ml.ipynb
+++ b/src/liver_disease_ml.ipynb
@@ -24,8 +24,6 @@
    "outputs": [],
    "source": [
     "#import libraries we will use\n",
-    "# ============================================\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd \n",
     "\n",
@@ -264,6 +262,7 @@
     "\n",
     "\"\"\"\n",
     "• The target column uses labels 1/2. We convert this to 1/0 for binary classification.\n",
+    "\n",
     "• Gender is encoded as 1 = Male and 0 = Female.\n",
     "\n",
     "These encodings simplify modeling and match typical ML preprocessing steps.\n",
@@ -435,6 +434,19 @@
     "\n",
     "print(\"\\nTarget value distribution:\")\n",
     "print(y.value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "032723ee-fe35-4adc-90cc-81d3c9188575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "At this point, the dataset has 579 rows and 10 features. I removed a few rows with missing values and converted Gender to numeric.\n",
+    "The positive class (liver disease) is still around 71%, so I’ll need more than just accuracy when evaluating models.\n",
+    "\"\"\""
    ]
   },
   {
@@ -620,7 +632,12 @@
     "        # Many classifiers implement predict_proba (LogReg, RF, XGB, etc.)\n",
     "        y_proba = model.predict_proba(X_te)[:, 1]\n",
     "    elif hasattr(model, \"decision_function\"):\n",
-    "        # Some (like SVM) use decision_function instead\n",
+    "        \"\"\"\n",
+    "        Note: I wrote this helper so I wouldn’t have to repeat code. For models that don’t have predict_proba, \n",
+    "        I added a decision_function branch and rescaled scores to [0,1] so I could still compute ROC and PR curves. \n",
+    "        For the models in this project, only the predict_proba path is actually used.\n",
+    "        \"\"\"\n",
+    "        # Some use decision_function instead\n",
     "        scores = model.decision_function(X_te)\n",
     "        # Scale scores to [0, 1] so we can treat them like probabilities\n",
     "        tmp_scaler = MinMaxScaler()\n",
@@ -679,6 +696,9 @@
     "\n",
     "Key expectation:\n",
     "High recall (medical setting) and stable ROC-AUC.\n",
+    "\n",
+    "I start with Logistic Regression as a baseline model, since it’s simple and was one of the first classifiers we studied in class.\n",
+    "It also outputs probabilities, which are helpful for ROC and PR curves.\n",
     "\"\"\""
    ]
   },
@@ -999,7 +1019,9 @@
     "\n",
     "\"\"\"\n",
     "Boosting builds trees sequentially, correcting previous mistakes.\n",
-    "Week 10 covered boosting concepts, and scikit-learn’s implementation fits within course expectations.\n",
+    "\n",
+    "Here I move to tree-based models. Random Forest uses bagging with many decision trees to reduce variance. Gradient Boosting builds trees sequentially to correct previous errors.\n",
+    "These were covered in Week 10 and usually work well on tabular data.\n",
     "\"\"\""
    ]
   },
@@ -1072,8 +1094,10 @@
     "## Neural Network (MLP)\n",
     "\n",
     "\"\"\"\n",
-    "A small feed-forward neural network is used to model nonlinear interactions.\n",
-    "Because the dataset is small, I include dropout and validation to avoid overfitting.\n",
+    "A small feed-forward neural network is used to model nonlinear interactions. Because the dataset is small, I include dropout and validation to avoid overfitting.\n",
+    "\n",
+    "Next I try a small neural network (MLP) with two hidden layers and dropout. This connects with our Week 6–8 material on neural networks.\n",
+    "Because the dataset is fairly small, I kept the architecture simple to avoid overfitting.\n",
     "\"\"\""
    ]
   },
@@ -1131,11 +1155,11 @@
    ],
    "source": [
     "# Note: will take a bit to load\n",
-    "# ============================================\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from sklearn.metrics import auc\n",
     "\n",
     "# Build the model\n",
     "nn_model = Sequential([\n",
@@ -1176,12 +1200,8 @@
     "}\n",
     "\n",
     "# PR-AUC\n",
-    "prec_curve, rec_curve, _ = precision_recall_curve(y_test, y_proba_nn)\n",
-    "rec_sorted_idx = np.argsort(rec_curve)\n",
-    "nn_results[\"pr_auc\"] = np.trapz(\n",
-    "    prec_curve[rec_sorted_idx],\n",
-    "    rec_curve[rec_sorted_idx]\n",
-    ")\n",
+    "prec_curve, rec_curve, _ = precision_recall_curve(y_te, y_proba)\n",
+    "pr_auc = auc(rec_curve, prec_curve)\n",
     "\n",
     "# Print\n",
     "print(\"\\n=== Neural Network (MLP) ===\")\n",
@@ -1202,8 +1222,7 @@
     "## Autoencoder for Dimensionality Reduction\n",
     "\n",
     "\"\"\"\n",
-    "The autoencoder compresses the 10-dimensional input into a 3-dimensional latent representation.\n",
-    "This is exploratory and follows Week 12’s discussion on learned feature extraction.\n",
+    "Finally, I experiment with a tiny autoencoder, based on Week 12’s discussion of dimensionality reduction with neural networks. The goal here is not to beat the other models, but to see how a 3D latent representation organizes the data and whether a simple classifier on top of it can still perform reasonably.\n",
     "\"\"\""
    ]
   },
@@ -1223,7 +1242,6 @@
    ],
    "source": [
     "# Note: will take a bit to load\n",
-    "# ============================================\n",
     "\n",
     "from tensorflow.keras import Model, Input\n",
     "from tensorflow.keras.layers import Dense\n",
